--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/popup/change-password-modal.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/popup/change-password-modal.html
@@ -1,4 +1,4 @@
-<md-dialog class="default-popup">
+<md-dialog style="width:500px">
 
   	<md-toolbar style="height: 60px; min-height: 60px !important;">
   		<div flex layout="row" class="default-header">
@@ -8,37 +8,32 @@
     	</div> 
   	</md-toolbar> 
   	
-	<form name="form" style="height: 100%" md-theme="{{osmTheme}}" layout="column" novalidate>
-	  	<md-dialog-content layout="column" style="height: 100%;">
+	<form name="form" style="height: 100%"  flex flayout="column" novalidate>
+	  	<md-dialog-content layout="column" flex>
 	  		
-			  		<div layout="column" style="height:100%">
-			  			<div class="default-form">
-					        <div>
-						        <div class="default-info" layout="row">sssss</div>
+  			<div class="default-form" flex>
 					        	
-					        	<md-input-container layout="column" flex="30" >
-						    		<label>Nova senha</label>
-					                <input type="password" md-maxlength="100" maxlength="100" name="password" required ng-model="modal.newPassword">
-					
-					                <div ng-messages="form.$error">
-					                	<div ng-message="required" ng-if="form.$submitted">Campo obrigatório</div>
-					                	<div ng-message="md-maxlength" ng-if="form.$submitted">Limite de caracteres excedido</div>
-					                </div>
-					            </md-input-container>
-					            
-					            <md-input-container layout="column" flex="30" >
-						    		<label>Confirmação de nova senha</label>
-					                <input type="password" md-maxlength="100" maxlength="100" name="confirmNewPassword" required ng-model="modal.confirmNewPassword">
-					
-					                <div ng-messages="form.$error">
-					                	<div ng-message="required" ng-if="form.$submitted">Campo obrigatório</div>
-					                	<div ng-message="md-maxlength" ng-if="form.$submitted">Limite de caracteres excedido</div>
-					                </div>
-					            </md-input-container>
+        	<md-input-container layout="column"  >
+	    		<label>Nova senha</label>
+                <input type="password" md-maxlength="100" maxlength="100" name="password" required ng-model="modal.newPassword">
+
+                <div ng-messages="form.$error">
+                	<div ng-message="required" ng-if="form.$submitted">Campo obrigatório</div>
+                	<div ng-message="md-maxlength" ng-if="form.$submitted">Limite de caracteres excedido</div>
+                </div>
+            </md-input-container>
+            
+            <md-input-container layout="column"  >
+	    		<label>Confirmação de nova senha</label>
+                <input type="password" md-maxlength="100" maxlength="100" name="confirmNewPassword" required ng-model="modal.confirmNewPassword">
+
+                <div ng-messages="form.$error">
+                	<div ng-message="required" ng-if="form.$submitted">Campo obrigatório</div>
+                	<div ng-message="md-maxlength" ng-if="form.$submitted">Limite de caracteres excedido</div>
+                </div>
+            </md-input-container>
 					        	
-			            	</div>
-			  			</div>
-					</div>
+			</div>
 	  	</md-dialog-content>
 	  	
 	  	<md-divider style="order: 2"></md-divider>
