--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -49,7 +49,7 @@
 		
 	</head>
 		
-	<body ng-controller="HomeController">
+	<body ng-controller="HomeController" layout="column">
 		<ng-include src="'./modules/home/views/menu-sidenav.html'"></ng-include>
 
 		<!-- Header -->
@@ -102,7 +102,7 @@
     		
   		</md-toolbar>
   		
-  		<md-content flex="" ui-view="" layout="column" style="height:100%">
+  		<md-content flex="" ui-view="" layout="column" >
 			
   		</md-content>
   		
