--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-list.html
@@ -2,7 +2,7 @@
 <html xmlns:ng="http://angularjs.org" 
 	xmlns:th="http://www.thymeleaf.org" lang="pt">
 	
-	<div class="main-div" md-theme="{{graca-theme}}">
+	<div  md-theme="{{graca-theme}}">
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
@@ -14,10 +14,9 @@
 	        </div>
 	    </md-toolbar>
 	
-		<md-toolbar flex class="md-hue-3 md-osm-theme-theme toolbar-content" style="overflow:auto; height:90%">
+		<md-content flex class="md-hue-3">
 			<form layout="row" class="default-frame" >
-				<md-toolbar  class="toolbar-temp default-filter" layout="row">
-					<div flex layout="column">
+				<md-toolbar  class="md-hue-1" layout="column">
 						<div layout="row">
 							<md-input-container style="margin-bottom: 20px;" layout="column" flex>
 								<label>Digite sua pesquisa</label>
@@ -42,15 +41,13 @@
 						        </md-checkbox>
 							</div>				    									
 				    	</div>
-				    	
-				    </div>
 				</md-toolbar>
 			</form>	
 			
 <!-- 			TOOLBAR DA TABLE -->
 
-			<div layout="column" ng-cloak class="default-frame" style="margin-bottom:80px">
-				<md-toolbar style="background-color:#ffffff; color:black" layout="column">
+			<div layout ng-cloak class="default-frame" flex>
+				<md-toolbar class="md-hue-1" layout="column">
 					<md-table-container>
 					  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
 					    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
@@ -88,7 +85,7 @@
 				</md-toolbar>
 			</div>
 			
-		</md-toolbar>
+		</md-content>
 		
 	</div>
 </html>
