--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/avaliacaoindividual/popup/selecionar-crianca-popup.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/avaliacaoindividual/popup/selecionar-crianca-popup.html
@@ -3,12 +3,12 @@
   	<md-toolbar style="height: 60px; min-height: 60px !important;">
   		<div flex layout="row" class="default-header">
   			<div >
-	  			<h1 class="md-toolbar-tools" >Selecionar familia</h1>
+	  			<h1 class="md-toolbar-tools" >Selecionar Criança</h1>
   			</div>
     	</div> 
   	</md-toolbar> 
   	
-	<form name="model.integranteFamiliar.form" style="height: 100%;" md-theme="{{osmTheme}}" layout="column" novalidate>
+	<form name="model.integranteFamiliar.form" style="height: 100%;" layout="column" novalidate>
 	  	<md-dialog-content layout="column" style="height: 100%;">
 	  		
 			<div layout="column" style="height:100%">
@@ -16,8 +16,8 @@
 	  				
 	  				<div layout="row" flex>
 		            	<md-input-container layout="column" flex>
-				    		<label>Família</label>
-			                <input maxlength="144" name="familia" ng-model="model.familia.filters.terms">
+				    		<label>Criança</label>
+			                <input maxlength="144" name="criança" ng-model="model.crianca.filters.terms">
 			            </md-input-container>
 			            
 			            <md-button style="height:20px; margin-top:32px" class="md-raised md-primary md-hue-3" type="button" ng-click="listFamiliasByFilters()">
@@ -25,44 +25,45 @@
 					    </md-button>
 	  				</div>
 	  				
-	  				<md-toolbar style="background-color:#ffffff; color:black" layout="column">
-						<md-table-container>
-						  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
-						    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
-						      <tr md-row>
-						        <th md-column md-order-by="nameToLower"><span>Nome</span></th>
-						        <th md-column md-numeric md-order-by="calories.value"><span>Nome da Mãe</span></th>
-						        <th md-column md-numeric>Endereço</th>
-						        <th md-column md-numeric>Telefone</th>
-						      </tr>
-						    </thead>
-						    <tbody md-body>
-						      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="selectFamilia(familia)" md-select-id="name" md-auto-select ng-repeat="familia in model.familia.page.content">
-						        <td md-cell>{{::familia.nome}}</td>
-						        <td md-cell>{{::familia.nomeMae}}</td>
-						        <td md-cell>{{::familia.endereco.rua}}</td>
-						        <td md-cell>{{::familia.telefone}}</td>
-						      </tr>
-						    </tbody>
-						  </table>
-						</md-table-container>
-											
-						<div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.familia.page.content.length == 0">
-							Nenhum registro de família encontrado
-						</div>
-						
-						<md-divider></md-divider>
-						<div class="default-paginator" layout layout-align="end center" ng-if="model.familia.page.content.length > 0">
-							{{ model.familia.page.pageable.page + 1 }} de {{ totalPagesFamilia }}
-							<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) < 2" ng-click="onFamiliaPaginationChange(false)">
-								<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.familia.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
-							</md-button>
-							<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) >= totalPagesFamilia" ng-click="onFamiliaPaginationChange(true)">
-								<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.familia.page.pageable.page + 1) >= Math.ceil(model.familia.page.total/model.familia.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
-							</md-button>
-				  		</div>
-				  		
-					</md-toolbar>
+	  				<div layout="column"  class="default-frame" style="margin-bottom:80px">
+						<md-toolbar style="background-color:#ffffff; color:black" layout="column">
+							<md-table-container>
+							  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
+							    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
+							      <tr md-row>
+							        <th md-column md-order-by="nameToLower"><span>Nome</span></th>
+							        <th md-column md-numeric md-order-by="calories.value"><span>Familia</span></th>
+							        <th md-column md-numeric>Idade</th>
+							        <th md-column md-numeric>Data de acolhimento</th>
+							      </tr>
+							    </thead>
+							    <tbody md-body>
+							      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="selectCrianca(crianca)" md-select-id="name" md-auto-select ng-repeat="crianca in model.crianca.page.content">
+							        <td md-cell>{{::crianca.nome}}</td>
+							        <td md-cell>{{::crianca.familia.nome}}</td>
+							        <td md-cell>{{::crianca.idade}}</td>
+							        <td md-cell>{{::crianca.dataAcolhimento | date : format : timezone}}</td>
+							      </tr>
+							    </tbody>
+							  </table>
+							</md-table-container>
+												
+							<div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.crianca.page.content.length == 0">
+								Nenhum registro de criança
+							</div>
+							
+							<md-divider></md-divider>
+							<div class="default-paginator" layout layout-align="end center" ng-if="model.crianca.page.content.length > 0">
+								{{ model.crianca.page.pageable.page + 1 }} de {{ totalPagesCrianca }}
+								<md-button class="md-icon-button" ng-disabled="(model.crianca.page.pageable.page + 1) < 2" ng-click="onCriancaPaginationChange(false)">
+									<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.crianca.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
+								</md-button>
+								<md-button class="md-icon-button" ng-disabled="(model.crianca.page.pageable.page + 1) >= totalPagesFamilia" ng-click="onCriancaPaginationChange(true)">
+									<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.crianca.page.pageable.page + 1) >= Math.ceil(model.crianca.page.total/model.crianca.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
+								</md-button>
+					  		</div>
+						</md-toolbar>
+					</div>
 					
 	  			</div>
 	  		</div>
@@ -73,11 +74,6 @@
   	
 	  	<md-dialog-actions layout="row" layout-align="end center">
 		    <div layout="row" ng-if="model.integranteFamiliar.entity">
-			    <div>
-				    <md-button ng-if="model.integranteFamiliar.entity.id" class="md-raised md-primary md-hue-3" type="button" ng-click="removeIntegranteFamiliar()">
-				    	Excluir integrante
-				    </md-button>
-			    </div>
 			    
 			    <div>
 				    <md-button class="md-raised md-primary md-hue-3" type="button" ng-click="cancel()">
