--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -40,6 +40,7 @@
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/questionario/questionario-controller.js}"></script>
 		
+		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/popup/selecionar-crianca-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/avaliacao-individual-controller.js}"></script>
 		
 		<!-- maskMoney -->
