usuário no front end, ajustes de tela para tema novo

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
@@ -2,7 +2,7 @@
 <html xmlns:ng="http://angularjs.org" 
 	xmlns:th="http://www.thymeleaf.org" lang="pt">
 	
-<div class="main-div" >
+<div class="main-div" layout="column" flex>
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
@@ -27,14 +27,11 @@
 	        
 	    </md-toolbar>
 		
-		<div layout="column" md-theme="{{}}" style="height: 100%; position:absolute; width:100%;">
-			<md-content layout="column" style="height: 93%;">
+			<md-content layout="column" flex style="height:100%">
 				<md-tabs md-border-bottom style="position: static; overflow:auto" md-selected="model.ordemServico.selectedTab">
 					<md-tab label="Família">
 						
 						<div layout-fill style="height:50%">
-				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
-								<div class="default-frame" style="overflow:auto">
 									<md-toolbar layout="row" class="default-form toolbar-temp" style="padding-bottom: 0; ">
 									
 										<form novalidate name="model.familia.form" class="default-form">
@@ -237,8 +234,6 @@
 									        
 										</form>
 									</md-toolbar>
-								</div>
-							</md-toolbar>
 						</div>
 						
 					</md-tab>
@@ -247,8 +242,6 @@
 					
 					<md-tab label="Integrante Familiar" ng-if="model.familia.entity.id">
 						<div layout-fill style="height:50%">
-				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
-								<div class="default-frame" style="overflow:auto">
 									<md-toolbar layout="row" class="default-form toolbar-temp" style="padding-bottom: 0; ">
 									
 										<form novalidate name="model.integranteFamiliar.form" class="default-form">
@@ -294,14 +287,11 @@
 									        
 										</form>
 									</md-toolbar>
-								</div>
-							</md-toolbar>
 						</div>
 						
 					</md-tab>
 				</md-tabs>
 			</md-content>
-		</div>
 		
 </div>
 
