--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -14,6 +14,12 @@
 		<!-- Scripts -->
 		<script th:replace="modules/default-scripts"></script>
 		
+		<script th:inline="javascript">
+		/*<![CDATA[*/
+		   user = /*[[${session.SPRING_SECURITY_CONTEXT.authentication}]]*/;
+		/*]]>*/
+		</script>
+		
 		<!-- Module --> 
 		<script type="text/javascript" th:src="@{/modules/home/home-module.js}"></script>
 		
