--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/avaliacaoindividual/avaliacao-individual-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/avaliacaoindividual/avaliacao-individual-form.html
@@ -32,7 +32,7 @@
 						            </md-input-container>
 									
 									<div md-theme="default" layout="row" layout-align="end center" class="default-header md-primary md-hue-3">
-								        <md-button class="md-raised md-accent default-save-button" ng-if="model.avaliacaoIndividual.status == 'RASCUNHO'" ng-click="openSelectCrianca()">Selecionar Criança</md-button>
+								        <md-button class="md-raised md-accent default-save-button" ng-if="!model.avaliacaoIndividual.entity.id || model.avaliacaoIndividual.status == 'RASCUNHO'" ng-click="openSelectCrianca()">Selecionar Criança</md-button>
 							        </div>
 								</div>
 				    			
