--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
@@ -2,7 +2,7 @@
 <html xmlns:ng="http://angularjs.org" 
 	xmlns:th="http://www.thymeleaf.org" lang="pt">
 	
-	<div class="main-div" md-theme="{{graca-theme}}">
+	<div class="main-div" layout="column" flex>
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
@@ -14,9 +14,8 @@
 	        </div>
 	    </md-toolbar>
 	
-		<md-toolbar flex class="md-hue-3 md-osm-theme-theme toolbar-content" style="overflow:auto; height:90%">
 			<form layout="row" class="default-frame" >
-				<md-toolbar  class="toolbar-temp default-filter" layout="row">
+				<md-toolbar  class="md-hue-1" layout="row">
 					<div flex layout="column">
 						<div layout="row">
 							<md-input-container style="margin-bottom: 20px;" layout="column" flex>
@@ -25,8 +24,8 @@
 							</md-input-container>
 					            
 				            <div layout="row" layout-align="end center" ng-init="currentOption = 'down'">
-					            <md-button class="md-raised md-primary md-hue-2" ng-click="!moreFilters ? listFamiliasByFilters() : listFamiliasByMoreFilters()">Filtrar</md-button>
-					            <md-button class="md-raised md-primary md-hue-3" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
+					            <md-button class="md-raised" ng-click="!moreFilters ? listFamiliasByFilters() : listFamiliasByMoreFilters()">Filtrar</md-button>
+					            <md-button class="md-raised" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
 					            	Mais opções
 					            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i>
 					            	<i ng-if="currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-up"></i> 
@@ -52,8 +51,8 @@
 			
 <!-- 			TOOLBAR DA TABLE -->
 
-			<div layout="column" ng-cloak class="default-frame" style="margin-bottom:80px">
-				<md-toolbar style="background-color:#ffffff; color:black" layout="column">
+			<div layout="column" ng-cloak class="default-frame" flex>
+				<md-toolbar class="md-hue-1" layout="column" flex>
 					<md-table-container>
 					  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
 					    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
@@ -93,7 +92,5 @@
 				</md-toolbar>
 			</div>
 			
-		</md-toolbar>
-		
 	</div>
 </html>
