--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-form.html
@@ -2,7 +2,7 @@
 <html xmlns:ng="http://angularjs.org" 
 	xmlns:th="http://www.thymeleaf.org" lang="pt">
 	
-<div class="main-div" >
+<div class="main-div" layout="column" flex>
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
@@ -31,17 +31,13 @@
 	        
 	    </md-toolbar>
 		
-		<div layout="column" md-theme="{{}}" style="height: 100%; position:absolute; width:100%;">
-			<md-content layout="column" style="height: 93%;">
+			<md-content layout="column" flex style="height:100%">
 				<md-tabs md-border-bottom style="position: static; overflow:auto" md-selected="model.ordemServico.selectedTab">
 					<md-tab label="Família">
 						
-						<div layout-fill style="height:50%">
-				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
-								<div class="default-frame" style="overflow:auto">
-									<md-toolbar layout="row" class="default-form toolbar-temp" style="padding-bottom: 0; ">
-									
-										<form novalidate name="model.familia.form" class="default-form">
+							<div style="height:100%" class="default-frame" layout="column">
+								<md-toolbar layout style="height:100%" class="md-hue-1">									
+										<form novalidate name="model.familia.form" class="default-form" flex>
 											
 											<div layout="row">
 												<md-input-container layout="column" >
@@ -97,20 +93,14 @@
 										</form>
 									</md-toolbar>
 								</div>
-							</md-toolbar>
-						</div>
 						
 					</md-tab>
 					
 <!-- 					TAB INTEGRANTE FAMILIAR -->
 					
 					<md-tab label="Encaminhamentos" ng-if="model.planoAtendimentoFamiliar.entity.status != 'RASCUNHO' && model.planoAtendimentoFamiliar.entity.id">
-						<div layout-fill style="height:50%">
-				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
-								<div class="default-frame" style="overflow:auto">
-									
-									<md-toolbar layout="row" class="dark-panel" style="background:white">
-									
+							<div style="height:100%" class="default-frame" layout="column">
+								<md-toolbar layout style="height:100%" class="md-hue-1">									
 										<md-input-container layout="column" flex="30" style="margin: 30px 0px 20px 30px">
 									        <label>Tipo de encaminhamento</label>
 									        <md-select name="tipoEncaminhamento" required ng-model="model.encaminhamento.tipo" ng-change="encaminhamentoHandler()">
@@ -255,13 +245,10 @@
 						            </md-expansion-panel-group>
 									
 								</div>
-							</md-toolbar>
-						</div>
 						
 					</md-tab>
 				</md-tabs>
 			</md-content>
-		</div>
 		
 </div>
 
