--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/casalar/casa-lar-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/casalar/casa-lar-form.html
@@ -2,19 +2,15 @@
 <html xmlns:ng="http://angularjs.org" 
 	xmlns:th="http://www.thymeleaf.org" lang="pt">
 	
-<div class="main-div" >
+<div class="main-div" layout="column" flex>
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
 		        <h1 class="md-toolbar-tools">Casa Lar</h1>
 	    	</div>
 	    	
-	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.casaLar.entity.enabled || !model.casaLar.entity.id" class="default-header md-primary md-hue-3">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="insertCasaLar()">Salvar</md-button>
-	        </div>
-	        
-	         <div md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(CASA_LAR_LIST_STATE)">Voltar</md-button>
+	    	<div md-theme="default" layout="row" layout-align="end center" class="default-header">
+		        <md-button class="md-raised" ng-click="$state.go(CASA_LAR_LIST_STATE)">Voltar</md-button>
 	        </div>
 	        
 	        <div ng-if="model.casaLar.entity.enabled == true" md-theme="default" layout="row" layout-align="end center" class="default-header">
@@ -25,18 +21,19 @@
 		        <md-button class="md-raised md-accent default-save-button" ng-click="enableUser()">Ativar registro</md-button>
 	        </div>
 	        
+	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.casaLar.entity.enabled || !model.casaLar.entity.id" class="default-header md-primary md-hue-3">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="insertCasaLar()">Salvar</md-button>
+	        </div>
+	        
 	    </md-toolbar>
 		
-		<div layout="column" md-theme="{{}}" style="height: 100%; position:absolute; width:100%;">
-			<md-content layout="column" style="height: 93%;">
-				<md-tabs md-border-bottom style="position: static; overflow:auto" md-selected="model.ordemServico.selectedTab">
-					<md-tab label="Casa Lar">
+			<md-content layout="column" flex >
+				<md-tabs  md-border-bottom flex md-selected="model.ordemServico.selectedTab">
+					<md-tab label="Casa Lar" >
 						
-						<div layout-fill style="height:50%">
-				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
-								<div class="default-frame" style="overflow:auto">
-									<md-toolbar layout="row" class="default-form toolbar-temp" style="padding-bottom: 0; ">
-										<form novalidate name="model.casaLar.form" class="default-form">
+								<div style="height:100%" class="default-frame" layout="column">
+									<md-toolbar layout style="height:100%" class="md-hue-1">
+										<form novalidate name="model.casaLar.form" class="default-form" flex>
 											
 											<md-input-container layout="column" flex="30" ">
 									    		<label>Número</label>
@@ -127,15 +124,10 @@
 										</form>
 									</md-toolbar>
 								</div>
-							</md-toolbar>
-						</div>
 						
 					</md-tab>
 					
 				</md-tabs>
 			</md-content>
-		</div>
-		
-</div>
-
+	</div>
 </html>
