--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/questionario/questionario-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/questionario/questionario-form.html
@@ -11,8 +11,8 @@
 	    	<div layout="row" style="margin-right: 30px;" layout-align="end center">
 		        <md-button class="md-raised" ng-click="$state.go( QUESTIONARIO_LIST_STATE )">Voltar</md-button>
 		        <md-button class="md-raised " ng-click="enviarParaAprovacao()" ng-if="model.questionario.entity.id && ( model.versao.entity.status == 'RASCUNHO' || model.versao.entity.status == 'REJEITADO' )">Enviar para aprovação</md-button>
-		        <md-button class="md-raised " ng-click="aprovarQuestionario()" ng-if="model.questionario.entity.id && ( model.versao.entity.status == 'AGUARDANDO_APROVACAO' || model.versao.entity.status == 'REJEITADO' )">Aprovar questionário</md-button>
-		        <md-button class="md-raised " ng-click="aumentarVersaoQuestionario()" ng-if="model.questionario.entity.id && ( model.versao.entity.status == 'APROVADO' )">Aumentar versão</md-button>
+		        <md-button class="md-raised " ng-click="aprovarQuestionario()" ng-if="hasPermission('ADMINISTRATOR') && ( model.questionario.entity.id && ( model.versao.entity.status == 'AGUARDANDO_APROVACAO' || model.versao.entity.status == 'REJEITADO' ))">Aprovar questionário</md-button>
+		        <md-button class="md-raised " ng-click="aumentarVersaoQuestionario()" ng-if="user.principal.id == model.questionario.entity.usuarioCriador.id && ( model.questionario.entity.id && ( model.versao.entity.status == 'APROVADO') )">Aumentar versão</md-button>
 		        <md-button class="md-raised md-accent" ng-click="save()">Salvar</md-button>
 	    	</div>
 	    </md-toolbar>
